# soccernet-calibration-sportlight

./: Dockerfile  README.md  pyproject.toml
baseline/: README.md
notebooks/: EDA.ipynb  ellipse.ipynb
soccernet_calibration/: __init__.py
soccernet_calibration/datatools/: intersections.py  line.py
soccernet_calibration/models/hrnet/: README.md  __init__.py  dataset.py  train.py  train_config.yaml  transforms.py
soccernet_calibration/models/hrnet/model_config/: hrnet_w18.yaml  hrnet_w48.yaml  hrnet_w64.yaml
soccernet_calibration/models/line/: README.md  __init__.py  train.py  train_config.yaml
soccernet_calibration/utils/: torch_compat.py
src/: __init__.py
src/datatools/: intersections.py  line.py
src/models/hrnet/: train.py  train_config.yaml  val_config.yaml  validate.py
src/models/line/: dataset.py  train.py  train_config.yaml
src/models/line/model_config/: hrnet_w48.yaml
src/soccernet_calibration/datatools/: __init__.py  ellipse.py
src/soccernet_calibration/models/: __init__.py
src/soccernet_calibration/models/hrnet/: README.md  metamodel.py  model.py  prediction.py  val_config.yaml  validate.py
src/soccernet_calibration/models/hrnet/model_config/: hrnet_w48x4.yaml
src/soccernet_calibration/models/line/: README.md  dataset.py  hrnet.py  metamodel.py  model.py
src/soccernet_calibration/utils/: __init__.py  export_line_result.py  make_submit.py
src/utils/: export_line_result.py  make_submit.py
